# lh001-91-example

./: .clangd  .gitignore  CMakeLists.txt  README.md  notes.txt  toolchain-arm-none-eabi.cmake
components/: CMakeLists.txt
components/lh_lib/: LH001_91.c  LH001_91.h
components/mcu/gd32f330/inc/: gd32f3x0_libopt.h
components/mcu/gd32f330/lib/inc/: gd32f3x0.h  gd32f3x0_adc.h  gd32f3x0_cec.h  gd32f3x0_cmp.h  gd32f3x0_crc.h  gd32f3x0_ctc.h  gd32f3x0_dac.h  gd32f3x0_dbg.h  gd32f3x0_dma.h  gd32f3x0_exti.h  gd32f3x0_fmc.h  gd32f3x0_fwdgt.h  gd32f3x0_gpio.h  gd32f3x0_i2c.h  gd32f3x0_misc.h  gd32f3x0_pmu.h  gd32f3x0_rcu.h  gd32f3x0_rtc.h  gd32f3x0_spi.h  gd32f3x0_syscfg.h  gd32f3x0_timer.h  gd32f3x0_tsi.h  gd32f3x0_usart.h  gd32f3x0_wwdgt.h
components/mcu/gd32f330/lib/src/: gd32f3x0_adc.c  gd32f3x0_cec.c  gd32f3x0_cmp.c  gd32f3x0_crc.c  gd32f3x0_ctc.c  gd32f3x0_dac.c  gd32f3x0_dbg.c  gd32f3x0_dma.c  gd32f3x0_exti.c  gd32f3x0_fmc.c  gd32f3x0_fwdgt.c  gd32f3x0_gpio.c  gd32f3x0_i2c.c  gd32f3x0_misc.c  gd32f3x0_pmu.c  gd32f3x0_rcu.c  gd32f3x0_rtc.c  gd32f3x0_spi.c  gd32f3x0_syscfg.c  gd32f3x0_timer.c  gd32f3x0_tsi.c  gd32f3x0_usart.c  gd32f3x0_wwdgt.c
components/mcu/gd32f330/port/: spi_def.h  spi_port.c  uart_print.c  uart_print.h
examples/ECG_GUI/gd32f330/: adaptive_lms.c  adaptive_lms.h  lh_ecg.c  lh_ecg.h  lh_resp.c  lh_resp.h  lh_temp.c  lh_temp.h  lh_weight.c  lh_weight.h  main.c  panTompkins.c  panTompkins.h  process_cmd.c  process_cmd.h  uart_frame.c  uart_frame.h
examples/ECG_GUI/gd32f330/KEIL/: EcgWeightTemp.uvguix.Legendsemi-PC6  EcgWeightTemp.uvoptx  EcgWeightTemp.uvprojx  JLinkLog.txt
examples/ECG_GUI/gd32f330/KEIL/RTE/: RTE_Components.h
examples/ECG_GUI/gd32f330/KEIL/RTE/Device/GD32F330F8/: startup_gd32f3x0.s  system_gd32f3x0.c
examples/ECG_UART/gd32f330/KEIL/: ECG.axf  ECG.build_log.htm  ECG.htm  ECG.lnp  ECG.map  ECG.uvguix.Legendsemi-PC6  ECG.uvguix.baizhiwei  ECG.uvoptx  ECG.uvprojx  ECG_Target 1.dep  JLinkLog.txt  gd32f3x0_exti.d  gd32f3x0_fmc.d  gd32f3x0_gpio.d  gd32f3x0_misc.d  gd32f3x0_rcu.d  gd32f3x0_spi.d  gd32f3x0_syscfg.d  gd32f3x0_timer.d  gd32f3x0_usart.d  lh001_91.d  lh3001.d  main.d  spi_port.d  startup_gd32f3x0.d  startup_gd32f3x0.lst  system_gd32f3x0.d  uart_print.d
examples/ECG_UART/gd32f330/KEIL/RTE/: RTE_Components.h
mcu/gd32f330/lib/inc/: gd32f3x0.h
mcu/gd32f330/port/: spi_port.c  spi_port.h  uart_print.h
src/: main.c  main.cpp
